2003-12-02  Bruno Haible  <bruno@clisp.org>

	* examples/Makefile.am (EXTRA_DIST): Don't add the EXAMPLESFILES.
	(distdir1): New rule. Install the EXAMPLESFILES after 'update-po'.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* po/mmsmallpo.sh: Remove the POT-Creation-Date line from the generated
	PO file.
	* Makefile.am (EXAMPLESFILES): Add hello-pascal/hello.rst.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* hello-*/po/LINGUAS: Update.
	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* po/es.po: New file, from Max de Mendizábal <max@upn.mx>.
	* po/LINGUAS: Add es.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* po/ca.po: New file, from Ivan Vilata i Balaguer <ivan@selidor.net>.
	* po/ro.po: New file, from Eugen Hoanca <eugenh@urban-grafx.ro>.
	* po/LINGUAS: Add ca, ro.

2003-11-22  Bruno Haible  <bruno@clisp.org>

	* po/ja.po: New file, from Masahito Yamaga <ma@yama-ga.com>.
	* po/LINGUAS: Add ja.

2003-11-20  Bruno Haible  <bruno@clisp.org>

	* hello-*/configure.ac: Remove AM_NLS invocation.
	* po/xsmallpot.sh: Don't keep AM_NLS lines.

2003-11-19  Bruno Haible  <bruno@clisp.org>

	* po/de.po: Update from Karl Eichwalder <ke@suse.de>.
	* po/fr.po: New file, from Michel Robitaille <robitail@iro.umontreal.ca>.
	* po/pl.po: New file, from Rafał Maszkowski <rzm@icm.edu.pl>.
	* po/sr.po: New file, from Danilo Segan <dsegan@gmx.net>.
	* po/zh_CN.po: New file, from Funda Wang <fundawang@linux.net.cn>.
	* po/LINGUAS: Add fr, pl, sr, zh_CN.

2003-11-15  Bruno Haible  <bruno@clisp.org>

	* hello-c/Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.
	* hello-c-gnome/Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.
	* hello-c++/Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.
	* hello-c++-kde/Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.
	* hello-c++-gnome/Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.