@@ -5,3 +5,12 @@ This example relies on:
   - the GTK libraries (libgtk, libgdk)
   - the glib libraries (libglib, libgmodule)
   - the X11 libraries
+
+Installation:
+  ./autogen.sh
+  ./configure --prefix=/some/prefix
+  make
+  make install
+Cleanup:
+  make distclean
+  ./autoclean.sh
