@@ -1,2 +1,11 @@
 This example relies on:
   - Perl (perl)
+
+Installation:
+  ./autogen.sh
+  ./configure --prefix=/some/prefix
+  make
+  make install
+Cleanup:
+  make distclean
+  ./autoclean.sh
