@@ -1,1 +1,10 @@
 This example relies on Python 2.0 or newer.
+
+Installation:
+  ./autogen.sh
+  ./configure --prefix=/some/prefix
+  make
+  make install
+Cleanup:
+  make distclean
+  ./autoclean.sh
