@@ -1,3 +1,12 @@
 This example relies on:
   - Tk (wish and libtk)
   - Tcl (tclsh and libtcl)
+
+Installation:
+  ./autogen.sh
+  ./configure --prefix=/some/prefix
+  make
+  make install
+Cleanup:
+  make distclean
+  ./autoclean.sh
